# nectar

./: Makefile  README.md  a.out
nectar/: Cargo.toml
nectar/src/: archetype.rs  defaults.rs  entity.rs  eventloop.rs  events.rs  lib.rs  logger.rs  scene.rs  shader.wgsl  texture.rs  vertex.rs  w.rs  window.rs  world.rs  zip.rs
nectar/src/events/: event.rs  handler.rs  mod.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
src/: glad.c  main.cpp  test.hpp.gch
src/shaders/: fragment.glsl  vertex.glsl
