[package]
name = "nectar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
pollster = "0.3.0"

[dev-dependencies]
