[package]
name = "nectar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = {version = "1.8.0", features = ["v4", "fast-rng", "macro-diagnostics"]}
winit = "0.28"
env_logger = "0.10"
log = "0.4"
wgpu = "0.18"
bytemuck = { version = "1.12", features = [ "derive" ] }
image = { version = "0.24", default-features = false, features = [ "png", "jpeg" ] }
anyhow = "1.0.81"
tokio = { version = "1.37.0", features = [ "full" ] }
[dev-dependencies]
